Update for Census employment data

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .Rhistory
 .RData
 ./data-raw/census_sgtax_annual/
+./data-raw/census_slgemp_annual/
 ./data-raw/census_slgfin_annual/
 ./data-raw/soi/
 ./data-raw/statepop/
